# physician-scheduling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: README.md  streamlit_app.py
app/core/: __init__.py  charts.py  services.py  store.py  ui.py
app/views/: comparador.py  cuadrante.py  evaluacion.py  experimento.py  generador.py  inicio.py  instancia.py  resolver.py
data/: fairness_base.csv  grid_base.csv  grid_extended.csv  sa_replicas_base.csv  sa_replicas_extended.csv
experiments/: analyze.py  run_grid.py  run_replicas.py
src/rostering/: __init__.py  delta.py  domain.py  experiment.py  generator.py  greedy.py  milp.py  objective.py  roster.py  sa.py  storage.py
